crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__separate_future_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> separate_future_imports.py:1:1
  |
1 | / import sys
2 | | import os
3 | | from __future__ import annotations
  | |__________________________________^
help: Organize imports
  |
1 + from __future__ import annotations
2 + 
3 + import os
4 + import sys
  |
