crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__separate_third_party_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> separate_third_party_imports.py:1:1
  |
1 | / import pandas as pd
2 | | import sys
3 | | import numpy as np
4 | | import os
  | |_________^
help: Organize imports
  |
1 + import os
2 + import sys
3 + 
4 + import numpy as np
5 + import pandas as pd
  |
