crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__split.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
  --> split.py:15:5
   |
14 |   if True:
15 | /     import C
16 | |     import A
   | |____________^
17 |
18 |       # isort: split
   |
help: Organize imports
   |
15 +     import A
16 +     import C
   |

I001 [*] Import block is un-sorted or un-formatted
  --> split.py:20:5
   |
18 |       # isort: split
19 |
20 | /     import D
21 | |     import B
   | |____________^
help: Organize imports
   |
20 +     import B
21 +     import D
   |

I001 [*] Import block is un-sorted or un-formatted
  --> split.py:30:1
   |
28 |   # isort: split
29 |
30 | / import d
31 | | import c
   | |________^
help: Organize imports
   |
30 + import c
31 + import d
   |
