crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__star_before_others.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> star_before_others.py:1:1
  |
1 | / from .logging import config_logging
2 | | from .settings import ENV
3 | | from .settings import *
  | |_______________________^
help: Organize imports
  |
1 + from .logging import config_logging
2 + from .settings import *
3 + from .settings import ENV
  |
