crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__straight_required_import_docstring.pyi.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I002 [*] Missing required import: `import os`
--> docstring.pyi:1:1
help: Insert required import: `import os`
  |
1 | """Hello, world!"""
2 + import os
3 + 
4 | x = 1
  |
