crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__trailing_suffix.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 Import block is un-sorted or un-formatted
 --> trailing_suffix.py:1:1
  |
1 | / import sys
2 | | import os; x = 1
  | |_________^
3 |
4 |   if True:
  |
help: Organize imports

I001 Import block is un-sorted or un-formatted
 --> trailing_suffix.py:5:5
  |
4 |   if True:
5 | /     import sys
6 | |     import os; x = 1
  | |_____________^
help: Organize imports
